@@ -4,7 +4,9 @@
 #' add the YAML: \code{knit: spida2::render_keep} to a .R Rmarkdown 
 #' document with output YAML \code{output: html_document}.
 #' 
+#' @param input file to be rendered
+#' @param ... other arguments passed to \code{\link{rmarkdown::render}}.
 #' @export
-render_keep <- function(input, encoding) {
-rmarkdown::render(input, clean = FALSE, encoding = encoding)
+render_keep <- function(input, ...) {
+  rmarkdown::render(input, clean = FALSE, envir = new.env(), ...)
 }
