@@ -4,7 +4,12 @@
 \alias{render_keep}
 \title{Render with Rmarkdown and keep intermediate files}
 \usage{
-render_keep(input, encoding)
+render_keep(input, ...)
+}
+\arguments{
+\item{input}{file to be rendered}
+
+\item{...}{other arguments passed to \code{\link{rmarkdown::render}}.}
 }
 \description{
 Following https://github.com/rstudio/rmarkdown/issues/17 
