@@ -1,3 +1,5 @@
+2020_11_14
+* added empty environment to render_keep
 2020_11_09
 * fixed cvar so 'up' with the 'freq' argument can return 'grouped data' in the sense of Agrest
 2020_11_07
